<resources>
    <string name="app_name">HeadZapp</string>
    <string name="hello">Hello!</string>
    <string name="welcome_to_headzapp_please_sign_in_or_sign_up_below">Welcome to headZapp, please sign in or sign up below.</string>
    <string name="email_address1">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="signin">SIGN IN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="image">image</string>
    <string name="or">OR</string>
    <string name="google_signbtn">google_signbtn</string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="goto_sign_up">SIGN UP</string>
    <string name="create_account_below">Create Account below</string>
    <string name="full_name">Full name</string>
    <string name="email_address2">Email address</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="goto_sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mylogo">Mylogo</string>
    <string name="full_namelabel">Full name</string>
    <string name="phone_verification_below">Phone verification below</string>
    <string name="we_will_send_you_a_one_time_sms_to_the_given_mobile_number">We will send you a one time sms to the given mobile number</string>
    <string name="enter_your_phone_number_to_continue">Enter your phone number to continue</string>
    <string name="_0778406544">0778406544</string>
    <string name="get_otp">Get OTP</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="enter_otp_verification_code">Enter OTP verification code</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="selected_0778406544">0778406544</string>
    <string name="_12468">12468</string>
    <string name="verify">VERIFY</string>
    <string name="didn_t_receive_the_otp_sms">Didn\'t receive the OTP sms?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="didn_t_receive_otp_sms">didn\'t_recieve_otp_sms</string>
    <string name="home">HOME</string>
    <string name="skip">Skip</string>
    <string name="select_your_favourite_categories_below">Select your favourite categories below</string>
    <string name="done">Done</string>


</resources>