<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/siginform"
    tools:context=".SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/saffron" />

        <View
            android:id="@+id/waveView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/wave2" />


        <TextView
            android:id="@+id/greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="32dp"
            android:text="@string/hello"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/welcome_to_headzapp_please_sign_in_or_sign_up_below"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/TextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/email_address1"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            android:autofillHints="" />
        <EditText
            android:id="@+id/enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="14dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            android:autofillHints="" />

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:text="@string/forgot_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/view1"
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_marginTop="18dp"
                android:layout_marginStart="32dp"/>

            <TextView
                android:id="@+id/Or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/or"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/view2"
                android:layout_width="260dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"/>

        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_image"
            android:layout_marginTop="5dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:adjustViewBounds="true">

            <ImageView
                android:id="@+id/Image_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:src="@drawable/sign_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Sign in with Google"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="5dp"
                android:layout_marginStart="60dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/goto_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/goto_sign_up"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:textColor="@color/saffron"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>
